@@ -1,4 +1,5 @@
 DIST LoopTools-2.10.tar.gz 550654 SHA256 141ab2153006ca3f1cc01e66e1552c02bf8164b9216304ff1829370b7b5c77bb SHA512 1fc9ef5a9ced8ea08ddc5f494338fb27b55bacdd23a968ca4379e5ca63f8d74ea947fb0bb98a80dfd6dddc0db1e80d2d454433abdcfeac323b51c27432046954 WHIRLPOOL b118d3f5f13b6e23920f7680b4b1a0b1d2c4079ac78c0763e73d30e9750d14ae57cd00f889e5b7392bc2ef53f88122be4d7f52de96f999676aa4e1e603353eae
 DIST LoopTools-2.11.tar.gz 546351 SHA256 efe14e774fcd66bdd46bbeb8065138793e3c1f5c73594c84c116edbab74c842d SHA512 fbe6c43b857561d0e7f35acdea32c34f2430c2faf23172790ad4426c469e39cd0df413d2c3cdc080ce9c4dcfb95773b7dc70b13738341c9d0438f4445cdbf6ab WHIRLPOOL 74b30ebe59998f2217b7e5cfb6e90671193159e5e3adfb2c26fee9c6f7b4021932ea8158e191f2e538e2e6d037fc86382659a697f638dc22ea3d068dfb92340c
+DIST LoopTools-2.12.tar.gz 545153 SHA256 df04d944de15ec73665edaf76f655d1db797cbc02b54baa7664ac761ecfa2f70 SHA512 70726493bd138fb80b85a46955fbe28b7f1432d9b67a100fe3ff74c2fa22232a07e461a6742745b0ead81793bb64b81cc4265d09b91fa048e7bdd32cf6956b27 WHIRLPOOL af3abaf31a4a868e0f65bdb0b21405c413c470063e4c8130e31b2a9e05a4f0e65e9999323e3cdf0b4277e48e84d767288852e984d486468abab3aaa664f66879
 DIST LoopTools-2.8.tar.gz 546810 SHA256 2395518d0eac9b0883a2c249b9a5ba80df443929c520c45e60f5a4284166eb42 SHA512 32211669fd092d2d5bb38e26a6471a95df0647d9e7ea0cc4e99ff4fd7c3e3fee107f6432ed9075e3102224f0041fac6f7075b1f0a91f7744ec3890b4b36d276e WHIRLPOOL c8dff8030d7ea1bfc6b65bef3370c5acfec69fa73f223a63b7424163b81a3bdf788eb3ffecd07e9bf61a31a63138b1fd126b6442a298c8fad1f4b04b69663a47
 DIST LoopTools-2.9.tar.gz 548404 SHA256 e3cdc10fdbc9fe68e56402d34c6d3abd1ec6d727db8914b0cec0119273f7aa4d SHA512 3a46c94a5ff72079c930d7ec2076b0f5278e897130383fdd656173218840f04e03ebb9fdef362af36a207a71a87c038fec6e008a231ef259120073760aa05534 WHIRLPOOL 50591b6aa4e7e624282ad2102c78060cd421c6f5b7abd293bb18b2ca6844857bdcdbafab8e33c86ff4bd464f1245ba0cd13978800ac4786411a658ffd947cc38
