@@ -1,6 +1,11 @@
 # ChangeLog for sci-physics/looptools
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*looptools-2.12 (07 Jun 2015)
+
+  07 Jun 2015; Jauhien Piatlicki <jauhien@gentoo.org> +looptools-2.12.ebuild:
+  version bump
 
 *looptools-2.11 (31 Aug 2014)
 *looptools-2.10 (31 Aug 2014)
